tests/rosetta/out/C/chinese-remainder-theorem.error
cc: exit status 1
/tmp/chinese-remainder-theorem.c: In function ‘crt’:
/tmp/chinese-remainder-theorem.c:79:24: error: invalid operands to binary % (have ‘double’ and ‘int’)
   79 |     int inv = modInv(p % ni, ni);
      |                        ^
