tests/rosetta/out/C/chinese-remainder-theorem.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T10:18:09Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T10:18:09Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
list_int egcd(int a, int b) {
  if (a == 0) {
    list_int tmp1 = list_int_create(3);
    tmp1.data[0] = b;
    tmp1.data[1] = 0;
    tmp1.data[2] = 1;
    return tmp1;
  }
  list_int res = egcd(b % a, a);
  int g = res.data[0];
  int x1 = res.data[1];
  int y1 = res.data[2];
  list_int tmp2 = list_int_create(3);
  tmp2.data[0] = g;
  tmp2.data[1] = y1 - (((double)b) / ((double)a)) * x1;
  tmp2.data[2] = x1;
  return tmp2;
}

int modInv(int a, int m) {
  list_int r = egcd(a, m);
  if (r.data[0] != 1) {
    return 0;
  }
  int x = r.data[1];
  if (x < 0) {
    return x + m;
  }
  return x;
}

int crt(list_int a, list_int n) {
  int prod = 1;
  int i = 0;
  while (i < n.len) {
    prod = prod * n.data[i];
    i = i + 1;
  }
  int x = 0;
  i = 0;
  while (i < n.len) {
    int ni = n.data[i];
    int ai = a.data[i];
    double p = ((double)prod) / ((double)ni);
    int inv = modInv(p % ni, ni);
    x = x + ai * inv * p;
    i = i + 1;
  }
  return x % prod;
}

int _mochi_main() {
  list_int n = list_int_create(3);
  n.data[0] = 3;
  n.data[1] = 5;
  n.data[2] = 7;
  list_int a = list_int_create(3);
  a.data[0] = 2;
  a.data[1] = 3;
  a.data[2] = 2;
  list_int tmp3 = list_int_create(3);
  tmp3.data[0] = 2;
  tmp3.data[1] = 3;
  tmp3.data[2] = 2;
  list_int tmp4 = list_int_create(3);
  tmp4.data[0] = 3;
  tmp4.data[1] = 5;
  tmp4.data[2] = 7;
  int res = crt(tmp3, tmp4);
  char *tmp5 = _str(res);
  char *tmp6 = concat_string(tmp5, " <nil>");
  printf("%s\n", tmp6);
  return 0;
}
int main() { return _mochi_main(); }
